--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,6 +97,25 @@ a:hover {
   align-items: center;
 }
 
+.flexed-around {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.flexed-evenly {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.flexed-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 /* login page start */
 
 .login-content h1 {
@@ -342,4 +361,24 @@ a:hover {
 .components-gallery-item-icon {
   font-size: 1.3rem;
   color: var(--theme);
+}
+
+.mave-footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #001529;
+  color: rgb(219, 219, 219);
+  text-align: center;
+  padding: 10px 0;
+  box-shadow: 0px 0px 20px 0px #3a3a3a;
+}
+
+.mave-footer a{
+  color: white;
+  font-weight: 500;
+}
+
+.mave-footer a:hover{
+  color: var(--themes);
 }
