working on youtube influencers

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -464,3 +464,31 @@ a:hover {
   .ant-menu-sub.ant-menu-inline {
   background-color: transparent;
 }
+
+.request-purchase-button {
+  /* marginTop: "2rem",
+                  borderRadius: "1.5rem",
+                  padding: "0.5rem 1rem 2.2rem 1rem",
+                  fontSize: "1.1rem",
+                  fontWeight: 600,
+                  color: "white",
+                  backgroundColor: "#2D68FF",
+                  border: "2px solid #2D68FF", */
+  margin-top: 2rem;
+  border-radius: 1.5rem;
+  padding: 0.5rem 1rem 2.2rem 1rem;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: white;
+  background-color: #2d68ff;
+  border: 2px solid #2d68ff;
+}
+.request-purchase-button:hover {
+  color: #2d68ff;
+  background-color: #ffffff;
+  border: 2px solid #2d68ff;
+  transition: all 0.5s;
+}
+.ant-tabs-tab-btn {
+  color: var(--mild-black);
+}
