--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: "Ubuntu", sans-serif;
+  font-size: 90%;
 }
 
 body {
@@ -399,6 +400,7 @@ a:hover {
   width: 100%;
   background-color: #001529;
   color: rgb(219, 219, 219);
+  font-size: clamp(0.6rem, 1vw, 0.9rem);
   text-align: center;
   padding: 10px 0;
   /* box-shadow: 0px 0px 20px 0px #3a3a3a; */
