--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,9 @@
   --gray: #f5f5f5;
   --gray-dark: #bababa;
   --theme: #9012ff;
+  --theme-transparent: #f3ecf8;
   --themes: #f1612a;
+  --themes-transparent: #ffefe9;
   --themes-light: #f1622a25;
   --success: #008f39;
   --lightorange: rgba(255, 108, 50, 0.2);
@@ -488,48 +490,6 @@ a:hover {
 }
 
 /* form builder */
-
-.form-builder {
-  display: flex;
-  padding: 20px;
-}
-
-.panel {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.element-panel {
-  background: #f5f5f5;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.builder-panel {
-  background: #fff;
-  padding: 10px;
-  border: 2px dashed #ccc;
-  border-radius: 5px;
-  min-height: 300px;
-}
-
-.form-element {
-  background: #f9f9f9;
-  padding: 10px;
-  border: 1px solid #ddd;
-  margin-bottom: 10px;
-  border-radius: 3px;
-}
-
-.draggable-element {
-  background: #fff;
-  padding: 10px;
-  border: 1px solid #ddd;
-  margin-bottom: 5px;
-  cursor: pointer;
-  border-radius: 3px;
-  transition: background 0.3s;
-}
 
 .draggable-element:hover {
   background: #f0f0f0;
