--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,9 +6,10 @@
   --white: #ffffff;
   --black: #343434;
   --gray: #f5f5f5;
-  --gray-dark: #bababa;
+  --gray-dark: #c9c9c9;
   /* --theme: #9012ff; */
   --theme: #fcb813;
+  --themelite: #fcb61364;
   --theme-transparent: #f3ecf8;
   /* --themes: #f1612a; */
   --themes: #fcb813;
