--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -20,6 +22,7 @@
   --lightorange: rgba(255, 108, 50, 0.2);
   --lightblue: #9012ff20;
   --transparentwhite: rgba(255, 255, 255, 0.7);
+  --notwhite: white;
 }
 
 * {
@@ -68,22 +71,10 @@ body::-webkit-scrollbar-track {
 }
 
 /* Viewcontiner */
-
-.ViewContainer {
+.mavecontainer {
   width: 80%;
-  max-width: 1500px;
+  max-width: 1920px;
   margin: 0 auto;
-  margin-top: 5rem;
-}
-
-/* ViewContentConter */
-
-.ViewContentContainer {
-  width: 80%;
-  width: 80%;
-  max-width: 1200px;
-  margin: 0 auto;
-  margin-top: 5rem;
   padding-bottom: 6em;
 }
 
