--- a/styles/globals.css
+++ b/styles/globals.css
@@ -502,14 +502,18 @@ a:hover {
 }
 
 .ant-switch.ant-switch-checked {
-  background: #fee9b6;
+  background: #797b7e;
 }
 .ant-switch {
   border-radius: 5px;
+  height: 30px;
+  padding-top: 4px;
 }
 .ant-switch .ant-switch-handle::before {
-  border-radius: 4px;
+  border-radius: 5px;
   background-color: var(--theme);
+  height: 34px;
+  margin: -4px -4px 0 0;
 }
 
 .ant-checkbox-checked .ant-checkbox-inner {
