--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,10 @@
   --white: #ffffff;
   --black: #343434;
   --gray: #f5f5f5;
-  --gray-dark: #c9c9c9;
+  --gray-dark: #4b5563;
   /* --theme: #9012ff; */
   --theme: #fcb813;
+  --theme-dark: #ffa17c;
   --themelite: #fcb61364;
   --theme-transparent: #f3ecf8;
   /* --themes: #f1612a; */
@@ -86,6 +87,17 @@ a {
 a:hover {
   color: var(--theme);
   text-decoration: none;
+}
+
+.mavebutton {
+  background-color: var(--theme);
+  color: var(--gray-dark);
+  border: 2px solid var(--theme-dark);
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .container {
