--- a/styles/globals.css
+++ b/styles/globals.css
@@ -642,7 +642,6 @@ a:hover {
   width: 100%;
   height: 100%;
 }
-/* Example: styles/globals.css */
 
 .table-responsive {
   overflow-x: auto;
@@ -650,4 +649,31 @@ a:hover {
 
 .editable-row:hover {
   background-color: #fafafa;
+}
+.accordion-content {
+  padding: 10px;
+}
+
+.accordion-collapse .ant-collapse-header {
+  font-weight: bold;
+}
+
+.border {
+  border: 1px solid #f0f0f0;
+}
+
+.rounded-md {
+  border-radius: 8px;
+}
+
+.bg-gray-50 {
+  background-color: #f9fafb;
+}
+
+.mb-4 {
+  margin-bottom: 16px;
+}
+
+.ml-4 {
+  margin-left: 16px;
 }
