--- a/styles/globals.css
+++ b/styles/globals.css
@@ -696,3 +696,10 @@ a:hover {
 .ant-btn:focus {
   box-shadow: 0 0 0 3px rgba(24, 144, 255, 0.3);
 }
+
+.settings-tabs .ant-tabs > .ant-tabs-nav {
+  position: fixed;
+}
+.settings-tabs .ant-tabs > .ant-tabs-content-holder {
+  margin-left: calc(100% - 62vw);
+}
