--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -9,12 +10,10 @@
   --black: #343434;
   --gray: #f5f5f5;
   --gray-dark: #797b7e;
-  /* --theme: #9012ff; */
   --theme: #fcb813;
   --theme-dark: #e3a611;
   --themelite: #fcb61364;
   --theme-transparent: #f3ecf8;
-  /* --themes: #f1612a; */
   --themes: #fcb813;
   --maveyellow: #fcb813;
   --themes-transparent: #ffefe9;
@@ -26,10 +25,11 @@
   --notwhite: white;
 }
 
+/* Reset and Base Styles */
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 html,
@@ -38,14 +38,11 @@ body {
   overflow-x: hidden;
   font-family: "Ubuntu", sans-serif;
   font-size: 90%;
-}
-
-body {
   color: var(--black);
   background: var(--notwhite);
 }
 
-/* scrollbar color change */
+/* Scrollbar Styles */
 body::-webkit-scrollbar {
   width: 10px;
 }
@@ -59,82 +56,32 @@ body::-webkit-scrollbar-track {
   background-color: var(--notwhite);
 }
 
-/* scale down in laptop screen */
+/* Responsive Scaling */
 @media (max-width: 1024px) {
   body {
-    scale: 0.9;
+    transform: scale(0.9);
   }
 }
 
-:where(.css-dev-only-do-not-override-18iikkb).ant-menu-dark
-  .ant-menu-item-selected {
+/* Ant Design Overrides */
+.ant-menu-dark .ant-menu-item-selected {
   background-color: var(--themes);
-}
-
-/* Viewcontiner */
-.mavecontainer {
-  width: 100lvw;
-  max-width: 86%;
-  margin: 0 auto;
-  padding-bottom: 6em;
 }
 
 .ant-menu-light.ant-menu-root.ant-menu-inline {
   border-inline-end: 1px solid transparent;
 }
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-a:hover {
-  color: var(--theme);
-  text-decoration: none;
-}
-
-.mavebutton {
-  background-color: var(--theme);
-  color: var(--black);
-  border: 2px solid var(--theme-dark);
-  padding: 0.8rem 1rem;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-right: clamp(0.5rem, 1vw, 1rem);
-}
-
-.mavecancelbutton {
-  background-color: var(--gray-dark);
-  color: var(--white);
-  border: 2px solid var(--gray-dark);
-  padding: 0.8rem 1rem;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-right: clamp(0.5rem, 1vw, 1rem);
-}
-
-.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
+.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover,
+.ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
   background-color: var(--gray-dark);
   border-color: var(--gray-dark);
   color: var(--white) !important;
   box-shadow: none;
 }
 
-.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover .google {
+.ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover .google {
   color: var(--white);
-}
-
-.ql-editor {
-  min-height: 200px;
-}
-
-:where(.css-dev-only-do-not-override-f7vrd6).ant-layout
-  .ant-layout-sider-light
-  .ant-layout-sider-trigger {
-  display: none;
 }
 
 .ant-tabs .ant-tabs-tab-btn {
@@ -143,75 +90,177 @@ a:hover {
   font-weight: 600;
   letter-spacing: 1px;
 }
-.ant-tabs .ant-tabs-tab-btn:hover {
+
+.ant-tabs .ant-tabs-tab-btn:hover,
+.ant-tabs .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
   color: var(--theme);
   cursor: pointer;
 }
-.ant-tabs .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
-  color: var(--theme);
-  font-size: clamp(0.8rem, 1vw, 1.2rem);
-  font-weight: 600;
-  letter-spacing: 1px;
+
+.ant-menu-light .ant-menu-item-selected,
+.ant-menu-light > .ant-menu .ant-menu-item-selected {
+  background-color: var(--transparentwhite); /* BG color of active submenu */
+  color: var(--black);
 }
 
-.container {
+.ant-layout .ant-layout-sider-children .ant-menu.ant-menu-inline-collapsed {
+  border: none;
+}
+
+.ant-menu-light.ant-menu-horizontal > .ant-menu-item-selected {
+  color: var(--theme);
+}
+
+.ant-menu-light.ant-menu-horizontal > .ant-menu-item:hover::after,
+.ant-menu-light.ant-menu-horizontal > .ant-menu-item-active::after {
+  border-bottom-color: var(--theme);
+}
+
+.ant-menu .ant-menu-submenu-selected {
+  background-color: var(--theme);
+}
+
+.ant-menu .ant-menu-submenu-selected > .ant-menu-submenu-title,
+.ant-menu .ant-menu-submenu-selected > .ant-menu-submenu-title:hover {
+  background-color: var(--white);
+}
+
+/* Target the selected main menu submenu title */
+.ant-menu-submenu-selected > .ant-menu-submenu-title {
+  color: var(--gray-dark) !important; /* Ensure text color remains readable */
+}
+
+.ant-radio-wrapper .ant-radio-checked .ant-radio-inner,
+.ant-checkbox-checked .ant-checkbox-inner {
+  border-color: var(--theme);
+  background-color: var(--theme);
+}
+
+.ant-layout-header {
+  padding: 0;
+}
+
+.ant-card .ant-card-body {
+  padding: 0 1rem 1rem;
+}
+
+.ant-modal-content {
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+.ant-modal-close {
+  color: #fff;
+}
+
+.ant-switch.ant-switch-checked {
+  background: #797b7e;
+}
+
+.ant-switch {
+  border-radius: 5px;
+  height: 30px;
+  padding-top: 4px;
+}
+
+.ant-switch .ant-switch-handle::before {
+  border-radius: 5px;
+  background-color: var(--theme);
+  height: 34px;
+  margin: -4px -4px 0 0;
+}
+
+/* Link Styles */
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--theme);
+}
+
+/* Button Styles */
+.mavebutton,
+.mavecancelbutton {
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-right: clamp(0.5rem, 1vw, 1rem);
+}
+
+.mavebutton {
+  background-color: var(--theme);
+  color: var(--black);
+  border: 2px solid var(--theme-dark);
+}
+
+.mavecancelbutton {
+  background-color: var(--gray-dark);
+  color: var(--white);
+  border: 2px solid var(--gray-dark);
+}
+
+/* Container Styles */
+.container,
+.mavecontainer {
+  width: 100vw;
   max-width: var(--max-width);
   margin: 0 auto;
   padding: 0 1rem;
 }
 
-.flexed {
+.mavecontainer {
+  max-width: 86%;
+  padding-bottom: 6em;
+}
+
+/* Flex and Grid Utilities */
+.flexed,
+.grided {
   display: flex;
 }
 
-.grided {
-  display: grid;
-}
-
-.flexed-center {
+.flexed-center,
+.grided-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.grided-center {
-  display: grid;
-  place-items: center;
+.flexed-between,
+.flexed-among,
+.flexed-around,
+.flexed-evenly,
+.flexed-column {
+  display: flex;
+  align-items: center;
 }
 
 .flexed-between {
-  display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .flexed-among {
-  display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .flexed-around {
-  display: flex;
   justify-content: space-around;
-  align-items: center;
 }
 
 .flexed-evenly {
-  display: flex;
   justify-content: space-evenly;
-  align-items: center;
 }
 
 .flexed-column {
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-/* login page start */
-
+/* Login Page Styles */
 .login-content h1 {
   font-size: 50px;
   font-weight: 400;
@@ -227,10 +276,7 @@ a:hover {
   margin-top: 0.5rem;
 }
 
-.ant-input:focus {
-  border-color: var(--themes);
-}
-
+.ant-input:focus,
 .ant-input:hover {
   border-color: var(--themes);
   box-shadow: none;
@@ -243,21 +289,8 @@ a:hover {
   text-transform: uppercase;
 }
 
-:where(.css-dev-only-do-not-override-18iikkb).ant-btn-primary:not(
-    :disabled
-  ):not(.ant-btn-disabled):hover {
-  background-color: var(--themes);
-}
-
-:where(.css-dev-only-do-not-override-nnuwmp).ant-btn-primary:not(:disabled):not(
-    .ant-btn-disabled
-  ):hover {
-  background-color: var(--themes);
-}
-
 .modalContiner h1 {
   text-align: center;
-  /* text-transform: uppercase; */
 }
 
 .createAccout {
@@ -279,13 +312,12 @@ a:hover {
   font-weight: 600;
 }
 
-/* login page end */
-
+/* Navbar Styles */
 .navbar-items {
   background-color: red;
 }
 
-/* styles.css */
+/* Fade In-Out Animation */
 .fade-in-out {
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
@@ -295,6 +327,7 @@ a:hover {
   opacity: 1;
 }
 
+/* Profile Container */
 .profileContainer {
   width: 90%;
   max-width: 800px;
@@ -302,102 +335,55 @@ a:hover {
   border-radius: 15px;
 }
 
-.item1 {
+.item {
   background-color: #ceedff;
   border-radius: 15px;
   display: flex;
-  padding: 1rem;
-  column-gap: 3rem;
+  padding: 1rem 3rem 1rem 3rem;
   border: 1px solid #d6d6d6;
-  padding-left: 3rem;
-
-  /* justify-content: space-evenly; */
 }
 
-.item2 {
-  background-color: #ceedff;
-  border-radius: 15px;
-  display: flex;
-  padding: 1rem;
+.item:nth-child(1) {
+  column-gap: 3rem;
+}
+.item:nth-child(2) {
   column-gap: 3.3rem;
-  border: 1px solid #d6d6d6;
-  padding-left: 3rem;
-
-  /* justify-content: space-evenly; */
 }
-
-.item3 {
-  background-color: #ceedff;
-  border-radius: 15px;
-  display: flex;
-  padding: 1rem;
+.item:nth-child(3) {
   column-gap: 3rem;
-  border: 1px solid #d6d6d6;
-  padding-left: 3rem;
-
-  /* justify-content: space-evenly; */
 }
-
-.item4 {
-  background-color: #ceedff;
-  border-radius: 15px;
-  display: flex;
-  padding: 1rem;
+.item:nth-child(4) {
   column-gap: 3.5rem;
-  border: 1px solid #d6d6d6;
-  padding-left: 3rem;
-
-  /* justify-content: space-evenly; */
+}
+.item:nth-child(5) {
+  column-gap: 1rem;
 }
 
-.item5 {
-  background-color: #ceedff;
-  border-radius: 15px;
+/* Top Styles */
+.top {
+  font-weight: 700;
   display: flex;
-  padding: 1rem;
-  column-gap: 1rem;
-  border: 1px solid #d6d6d6;
-  padding-left: 3rem;
-
-  /* justify-content: space-evenly; */
 }
 
 .top1 {
-  font-weight: 700;
-  display: flex;
   padding-left: 1rem;
 }
-
-.top2 {
-  font-weight: 700;
-  display: flex;
-  padding-left: 0.5rem;
-}
-
-.top3 {
-  font-weight: 700;
-  display: flex;
-  padding-left: 0.5rem;
-}
-
+.top2,
+.top3,
 .top4 {
-  font-weight: 700;
-  display: flex;
   padding-left: 0.5rem;
 }
-
 .top5 {
-  font-weight: 700;
-  display: flex;
   padding-left: 3rem;
 }
 
+/* User Styles */
 .user {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 0.5rem;
+  gap: 0.5rem;
   margin-bottom: 1rem;
 }
 
@@ -405,12 +391,11 @@ a:hover {
   text-transform: uppercase;
 }
 
+/* Media Gallery */
 .media-gallery {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* Create four columns */
   gap: 16px;
-  /* Add some spacing between items */
 }
 
 .media-item {
@@ -420,18 +405,15 @@ a:hover {
 
 .media-item.selected {
   border: 2px solid var(--themes);
-  /* Add a border to the selected item */
 }
 
 .checkboxmedia:hover,
-.hutututu:hover {
-  cursor: pointer;
-}
-
+.hutututu:hover,
 .sitelogo:hover {
   cursor: pointer;
 }
 
+/* Components Gallery Item */
 .components-gallery-item {
   display: flex;
   flex-direction: column;
@@ -445,7 +427,13 @@ a:hover {
   cursor: pointer;
   height: 100px;
   width: 100px;
+  transition: transform 0.3s;
 }
+
+.components-gallery-item:hover {
+  transform: scale(1.05);
+}
+
 .components-gallery-item h3 {
   font-size: 1rem;
   font-weight: 500;
@@ -457,6 +445,7 @@ a:hover {
   color: var(--theme);
 }
 
+/* Footer Styles */
 .mave-footer {
   position: fixed;
   bottom: 0;
@@ -466,7 +455,6 @@ a:hover {
   font-size: clamp(0.6rem, 1vw, 0.9rem);
   text-align: center;
   padding: 10px 0;
-  /* box-shadow: 0px 0px 20px 0px #3a3a3a; */
   z-index: 2;
 }
 
@@ -479,10 +467,12 @@ a:hover {
   color: var(--themes);
 }
 
+/* Content Styles */
 .content {
   margin: 3em 0;
 }
 
+/* Support Card */
 .support-card {
   color: #001529;
   display: flex;
@@ -494,60 +484,28 @@ a:hover {
   border-radius: 25px;
   border: 2px solid #f0f0f0;
   background-color: white;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .support-card:hover {
-  color: #001529;
   background-color: #9012ff20;
   box-shadow: 0px 14px 14px rgba(0, 0, 0, 0.25);
 }
 
+/* Statistic Titles */
 .counter-cards .ant-statistic-title {
   font-size: 1.2rem;
   color: #ffffff;
 }
 
-.ant-menu-light .ant-menu-item-selected,
-.ant-menu-light > .ant-menu .ant-menu-item-selected {
-  background-color: var(--themes);
-}
-
-.ant-menu-light .ant-menu-item-selected,
-.ant-menu-light > .ant-menu .ant-menu-item-selected {
-  color: var(--black);
-}
-/* icon color svg white */
+/* Sidebar Icons */
 .sidebaricon:hover {
   color: #fff;
   fill: #fff;
   filter: grayscale(100%);
 }
-:where(.css-dev-only-do-not-override-1r287do).ant-menu-dark.ant-menu-inline
-  .ant-menu-sub.ant-menu-inline,
-:where(.css-dev-only-do-not-override-1r287do).ant-menu-dark
-  > .ant-menu.ant-menu-inline
-  .ant-menu-sub.ant-menu-inline {
-  background-color: transparent;
-}
-.ant-layout .ant-layout-sider-children .ant-menu.ant-menu-inline-collapsed {
-  border: none;
-}
 
-.ant-menu-light.ant-menu-horizontal > .ant-menu-item-selected {
-  color: var(--theme);
-}
-
-.ant-menu-light.ant-menu-horizontal > .ant-menu-item:hover::after,
-.ant-menu-light.ant-menu-horizontal > .ant-menu-item-active::after {
-  border-bottom-color: var(--theme);
-}
-
-.ant-tabs-tab-btn {
-  color: var(--mild-black);
-}
-
-/* form builder */
-
+/* Form Builder Styles */
 .draggable-element:hover {
   background: #f0f0f0;
 }
@@ -563,81 +521,7 @@ a:hover {
   fill: #7d88a1;
 }
 
-.ant-switch.ant-switch-checked {
-  background: #797b7e;
-}
-.ant-switch {
-  border-radius: 5px;
-  height: 30px;
-  padding-top: 4px;
-}
-.ant-switch .ant-switch-handle::before {
-  border-radius: 5px;
-  background-color: var(--theme);
-  height: 34px;
-  margin: -4px -4px 0 0;
-}
-
-.ant-checkbox-checked .ant-checkbox-inner {
-  background-color: var(--theme);
-  border-color: var(--theme);
-}
-:where(.css-dev-only-do-not-override-f7vrd6).ant-layout-header {
-  padding: 0;
-}
-/* Active Main Menu */
-:where(.css-dev-only-do-not-override-f7vrd6).ant-menu-light
-  .ant-menu-submenu-selected
-  > .ant-menu-submenu-title,
-:where(.css-dev-only-do-not-override-f7vrd6).ant-menu-light
-  > .ant-menu
-  .ant-menu-submenu-selected
-  > .ant-menu-submenu-title {
-  color: var(--theme);
-}
-:where(.css-dev-only-do-not-override-f7vrd6).ant-radio-wrapper
-  .ant-radio-checked
-  .ant-radio-inner {
-  border-color: var(--theme);
-  background-color: var(--theme);
-}
-.ant-menu .ant-menu-submenu-selected {
-  background-color: var(--theme);
-}
-.ant-menu .ant-menu-submenu-selected > .ant-menu-submenu-title {
-  background-color: var(--white);
-}
-.ant-menu .ant-menu-submenu-selected > .ant-menu-submenu-title:hover {
-  background-color: var(--white);
-}
-.ant-menu-light .ant-menu-item-selected {
-  background-color: var(--theme-dark);
-}
-.collapse-button.ant-btn-default {
-  background-color: transparent;
-  box-shadow: none;
-}
-
-/* Sidebar icons */
-:where(.css-dev-only-do-not-override-f7vrd6).ant-menu-inline-collapsed
-  > .ant-menu-submenu
-  > .ant-menu-submenu-title {
-  padding-inline: 10px;
-  height: fit-content;
-}
-:where(.css-dev-only-do-not-override-f7vrd6).ant-menu-vertical
-  .ant-menu-submenu-title {
-  height: fit-content;
-  line-height: auto;
-  padding-inline: 0;
-}
-.ant-card .ant-card-body {
-  padding: 0 1rem 1rem;
-}
-
 /* Video Component */
-/* Example: styles/globals.css */
-
 .video-responsive {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
@@ -654,13 +538,17 @@ a:hover {
   height: 100%;
 }
 
+/* Table Responsive */
 .table-responsive {
   overflow-x: auto;
 }
 
+/* Editable Row */
 .editable-row:hover {
   background-color: #fafafa;
 }
+
+/* Accordion Styles */
 .accordion-content {
   padding: 10px;
 }
@@ -669,6 +557,7 @@ a:hover {
   font-weight: bold;
 }
 
+/* Utility Classes */
 .border {
   border: 1px solid #f0f0f0;
 }
@@ -688,9 +577,7 @@ a:hover {
 .ml-4 {
   margin-left: 16px;
 }
-/* styles/globals.css */
 
-/* Ensure responsive alignment for buttons */
 .text-left {
   text-align: left;
 }
@@ -703,19 +590,20 @@ a:hover {
   text-align: right;
 }
 
-/* Style for accessible focus */
 .ant-btn:focus {
   box-shadow: 0 0 0 3px rgba(24, 144, 255, 0.3);
 }
 
+/* Settings Tabs */
 .settings-tabs .ant-tabs > .ant-tabs-nav {
   position: fixed;
 }
+
 .settings-tabs .ant-tabs > .ant-tabs-content-holder {
-  margin-left: calc(100% - 62vw);
+  margin-left: calc(12vw);
 }
 
-/* Grid Gallery Styles */
+/* Grid Gallery */
 .grid-gallery {
   width: 100%;
 }
@@ -730,7 +618,7 @@ a:hover {
   transform: scale(1.05);
 }
 
-/* Masonry Gallery Styles */
+/* Masonry Gallery */
 .masonry-gallery {
   width: 100%;
 }
@@ -745,14 +633,3 @@ a:hover {
 .masonry-item:hover {
   transform: scale(1.05);
 }
-
-/* Lightbox Modal Styles */
-.ant-modal-content {
-  background-color: rgba(0, 0, 0, 0.85);
-}
-
-.ant-modal-close {
-  color: #fff;
-}
-
-/* styles.css */
